--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,17 @@
 /*
    Spendenseite
  */
-.item:hover, .lead, .highlight, .questions a {
+.item:hover, .bold, .highlight, .questions a {
   font-family: 'pt_monobold', sans-serif;
   font-weight: 500; }
 
+.grow {
+  animation: grow .3s ease; }
+
+@keyframes grow {
+  50% {
+    box-shadow: 0 0 2rem #e22129;
+    transform: scale(1.3); } }
 @keyframes pulse {
   0% {
     transform: scale(0.5);
@@ -13,12 +20,21 @@
   50% {
     opacity: 0;
     transform: scale(2); } }
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 .pin {
   position: absolute;
   width: 2rem;
   height: 2rem;
   cursor: pointer;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  animation: fadeIn .5s ease;
+  z-index: 10; }
+  .pin:hover {
+    z-index: 11; }
   .pin:hover .more {
     display: block; }
   .pin .circle,
@@ -61,16 +77,16 @@
   .item:before {
     content: "+";
     padding-right: 1rem; }
-  .item:after {
-    content: attr(data-price) " €";
-    float: right; }
 
 .more {
   position: absolute;
   display: none;
+  top: 1rem;
   left: 0;
   width: 20rem;
-  padding-top: 3rem; }
+  padding-top: 2rem; }
+  .more:empty {
+    display: none; }
   .more .content {
     padding: 2rem;
     background: rgba(226, 33, 41, 0.9);
@@ -83,14 +99,39 @@
       left: 50%;
       height: 0;
       width: 0;
-      transform: translateY(1rem);
+      transform: translateY(0);
       border: solid transparent;
       border-bottom-color: rgba(226, 33, 41, 0.9);
       border-width: 1rem;
       margin-left: -1rem; }
+  .more.glimpse {
+    display: block;
+    opacity: 0;
+    animation: glimpse 5.5s .5s linear; }
 
-.lead, .highlight, .questions a {
+@keyframes glimpse {
+  0% {
+    opacity: 0; }
+  18% {
+    opacity: 1; }
+  82% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+.lead {
   font-size: 18px; }
+
+.strike {
+  position: relative;
+  display: inline-block; }
+  .strike:after {
+    content: '';
+    position: absolute;
+    top: calc(50% - 1px);
+    left: -3px;
+    right: -3px;
+    border-bottom: 2px solid #e22129;
+    transform: rotate(-9deg); }
 
 .highlight, .questions a {
   font-size: 24px;
@@ -99,11 +140,17 @@
 .hidden {
   display: none; }
 
+.pull-right {
+  float: right; }
+
+.pull-left {
+  float: left; }
+
 .center {
   text-align: center; }
   .center > * {
     display: inline-block;
-    margin-top: 2rem; }
+    margin-bottom: 2rem; }
 
 .brick {
   width: 25%;
@@ -111,12 +158,38 @@
   border: 1px dotted #333; }
 
 .lkw {
-  position: relative; }
+  position: relative;
+  z-index: 10; }
+
+#svg-lkw {
+  width: 100%; }
 
 .result {
-  position: relative; }
-  .result:hover .more {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1rem;
+  will-change: transition; }
+  .result .more {
+    transform: translateX(-50%);
+    top: 3rem;
+    left: 50%; }
+  .result:hover .more, .result.active .more {
     display: block; }
+  .result .amount,
+  .result .amount:focus {
+    margin: 0;
+    padding: 1rem 0;
+    border: 0;
+    background-color: transparent;
+    box-shadow: none;
+    text-align: right; }
+
+[data-price]:after {
+  content: attr(data-price) " €";
+  float: right; }
 
 .questions {
   display: flex;
