Regel des Main-Stylesheets überstimmt

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,8 @@
 
 // Site Styles ----------------------------------
 
+#main .inside { overflow: visible; } // gegen das main stylesheet
+
 .lkw {
    position: relative;
    z-index: 10;
