Viele kleine Anpassungen (Spacing etc)

--- a/scss/_item.scss
+++ b/scss/_item.scss
@@ -6,7 +6,7 @@ $textColor: $red;
    display: block;
    width: 100%;
    margin-top: $space / 2;
-   padding: $space / 2;
+   padding: 0.2rem $space / 2;
    background-color: $bgColor;
    color: $textColor;
    border: none;
