--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@
   font-weight: 500; }
 
 .grow {
-  animation: grow .3s ease; }
+  animation: grow .3s ease;
+  will-change: transform; }
 
 @keyframes grow {
   50% {
@@ -69,7 +70,7 @@
   display: block;
   width: 100%;
   margin-top: 1rem;
-  padding: 1rem;
+  padding: 0.2rem 1rem;
   background-color: white;
   color: #e22129;
   border: none;
@@ -83,6 +84,7 @@
   display: none;
   top: 1rem;
   left: 0;
+  z-index: 10;
   width: 20rem;
   padding-top: 2rem; }
   .more .content {
@@ -117,7 +119,13 @@
   100% {
     opacity: 0; } }
 .lead {
-  font-size: 18px; }
+  font-size: 16px; }
+
+.large, .highlight {
+  font-size: 24px; }
+
+.highlight {
+  color: #e22129; }
 
 .strike {
   position: relative;
@@ -131,10 +139,6 @@
     right: -3px;
     border-bottom: 2px solid #e22129;
     transform: rotate(-9deg); }
-
-.highlight {
-  font-size: 24px;
-  color: #e22129; }
 
 .invert.invert {
   color: white;
@@ -159,9 +163,19 @@
   width: 25%;
   padding: 1rem;
   border: 1px dotted #333; }
+  .brick.full {
+    width: calc(75% + 4rem); }
+  .brick.slim {
+    padding: 0 1rem; }
 
 #main .inside {
   overflow: visible; }
+
+#spendenseite {
+  margin-bottom: 32rem; }
+
+h1 {
+  font-size: 28px; }
 
 .lkw {
   position: relative;
@@ -176,6 +190,9 @@
   .row > :not(:first-child) {
     margin-left: 2rem; }
 
+.spenden-form {
+  margin-bottom: 5rem; }
+
 .result {
   position: relative;
   display: flex;
@@ -186,7 +203,7 @@
   .result .amount,
   .result .amount:focus {
     margin: 0;
-    padding: 1rem 0;
+    padding: 0;
     border: 0;
     background-color: transparent;
     box-shadow: none;
@@ -208,5 +225,25 @@
     opacity: 0.3;
     color: #e22129;
     background-color: white; }
+
+.info-buttons a {
+  color: #333; }
+
+.info-block {
+  position: relative; }
+  .info-block:after {
+    content: " ";
+    position: absolute;
+    top: -2rem;
+    left: 50%;
+    height: 0;
+    width: 0;
+    border: solid transparent;
+    border-bottom-color: #333;
+    border-width: 1rem;
+    margin-left: -1rem; }
+  .info-block iframe {
+    width: 100%;
+    height: 32rem; }
 
 /*# sourceMappingURL=style.css.map */
