--- a/scss/_marker.scss
+++ b/scss/_marker.scss
@@ -34,7 +34,8 @@ $duration: 3s;
    animation: fadeIn .5s ease;
    z-index: 10;
 
-   &:hover { z-index: 11; }
+   &:first-child { z-index: 11; } // für das Intro
+   &:hover { z-index: 12; } // um andere Marker zu überlagern
    &:hover .more { display: block; }
 
    .circle,
