--- a/scss/_more.scss
+++ b/scss/_more.scss
@@ -8,7 +8,7 @@ $textColor: $white;
    display: none;
    top: 1rem;
    left: 0;
-   z-index: 10;
+   z-index: 10; // für Spendenkorb
    width: $moreWidth;
    padding-top: $markerSize + $distanceTop;
 
