--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,10 @@
   transform: translate(-50%, -50%);
   animation: fadeIn .5s ease;
   z-index: 10; }
-  .pin:hover {
+  .pin:first-child {
     z-index: 11; }
+  .pin:hover {
+    z-index: 12; }
   .pin:hover .more {
     display: block; }
   .pin .circle,
@@ -81,11 +83,13 @@
 
 .more {
   position: absolute;
-  display: none;
+  z-index: 10;
   top: 1rem;
   left: 0;
-  z-index: 10;
-  width: 20rem;
+  display: none;
+  overflow: auto;
+  width: 25rem;
+  max-height: 30rem;
   padding-top: 2rem; }
   .more .content {
     padding: 2rem;
@@ -141,8 +145,9 @@
     transform: rotate(-9deg); }
 
 .invert.invert {
-  color: white;
-  background-color: #e22129; }
+  border: 0;
+  background-color: #e22129;
+  color: white; }
 
 .hidden {
   display: none; }
@@ -164,7 +169,7 @@
   padding: 1rem;
   border: 1px dotted #333; }
   .brick.full {
-    width: calc(75% + 4rem); }
+    width: 100%; }
   .brick.slim {
     padding: 0 1rem; }
 
@@ -224,14 +229,25 @@ h1 {
   .donate-button[disabled] {
     opacity: 0.3;
     color: #e22129;
+    border: 1px dotted #333;
     background-color: white; }
 
-.info-buttons a {
-  color: #333; }
+.info-buttons {
+  display: flex; }
+  .info-buttons .brick {
+    flex: 1; }
+  .info-buttons a {
+    color: #333; }
 
 .info-block {
   position: relative; }
-  .info-block:after {
+  .info-block[data-arrow-position="1"]:before {
+    left: calc(16.5% - .5rem); }
+  .info-block[data-arrow-position="2"]:before {
+    left: 50%; }
+  .info-block[data-arrow-position="3"]:before {
+    left: calc(83.5% + .5rem); }
+  .info-block:before {
     content: " ";
     position: absolute;
     top: -2rem;
