--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,18 +96,20 @@ h1 { font-size: 28px; }
 
 .spenden-form {
    margin-bottom: 5rem;
+
+   & > * { padding: 0 $space; }
 }
 
 .result {
    position: relative;
    display: flex;
    align-items: center;
-   padding: 0 1rem;
    will-change: transition;
    border: 2px solid $red;
 
    .amount,
    .amount:focus {
+      width: 10rem;
       margin: 0;
       padding: 0;
       border: 0;
