--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,16 +197,18 @@ h1 {
 
 .spenden-form {
   margin-bottom: 5rem; }
+  .spenden-form > * {
+    padding: 0 2rem; }
 
 .result {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 0 1rem;
   will-change: transition;
   border: 2px solid #e22129; }
   .result .amount,
   .result .amount:focus {
+    width: 10rem;
     margin: 0;
     padding: 0;
     border: 0;
