--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@
       top: calc(50% - 1px);
       left: -3px;
       right: -3px;
-      border-bottom: 2px solid #e22129;
+      border-bottom: 2px solid $red;
       transform: rotate(-9deg);
    }
 }
