--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,7 @@
    opacity: 0.7;
 
    &:after {
-      content: '';
+      content: "";
       position: absolute;
       top: calc(50% - 1px);
       left: -3px;
@@ -127,14 +127,17 @@ h1 { font-size: 28px; }
 
    .more {
       transform: translateX(-50%);
-      top: 3rem;
+      top: 2rem;
       left: 50%;
+   }
+
+   .item:before {
+      content: "-";
    }
 }
 
 [data-price]:after {
-   content: attr(data-price) " €";
-   float: right;
+   content: attr(data-price) "\00a0€";
 }
 
 .donate-button {
