--- a/scss/_item.scss
+++ b/scss/_item.scss
@@ -5,7 +5,6 @@ $textColor: $red;
    position: relative;
    display: table;
    width: 100%;
-   margin-top: $space / 2;
    padding: .2rem $space / 2;
    cursor: pointer;
    text-align: left;
@@ -13,6 +12,10 @@ $textColor: $red;
    border: none;
    background-color: $bgColor;
    align-items: center;
+
+   &:not(:last-child) {
+      margin-bottom: $space / 2;
+   }
 
    &:before,
    &:after,
