--- a/scss/style.scss
+++ b/scss/style.scss
@@ -161,13 +161,14 @@ h1 { font-size: 28px; }
 .info-block {
    position: relative;
 
-   &[data-arrow-position="1"]:before { left: calc(16.5% - .5rem); }
-   &[data-arrow-position="2"]:before { left: 50%; }
-   &[data-arrow-position="3"]:before { left: calc(83.5% + .5rem); }
+   .view { display: none; }
 
-   // Arrow
-   &:before {
-      content: " ";
+   img {
+      float: right;
+      margin: 1rem;
+   }
+
+   .arrow {
       position: absolute;
       top: -2rem;
       left: 50%;
@@ -177,10 +178,10 @@ h1 { font-size: 28px; }
       border-bottom-color: $black;
       border-width: $markerSize / 2;
       margin-left: -$markerSize / 2;
+      transition: left .5s;
    }
 
-   iframe {
-      width: 100%;
-      height: 32rem;
-   }
+   &[data-view="0"] .arrow { left: calc(16.5% - .5rem); }
+   &[data-view="1"] .arrow { left: 50%; }
+   &[data-view="2"] .arrow { left: calc(83.5% + .5rem); }
 }
