--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,7 +72,7 @@
 
 #main .inside { overflow: visible; } // gegen das main stylesheet
 
-#spendenseite { margin-bottom: 32rem; }
+.info-block { margin-bottom: 32rem; }
 
 h1 { font-size: 28px; }
 
