--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,43 +7,19 @@
   font-weight: 500; }
 
 .grow {
-  -webkit-animation: grow .3s ease;
-          animation: grow .3s ease; }
-
-@-webkit-keyframes grow {
-  50% {
-    box-shadow: 0 0 2rem #e22129;
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3); } }
+  animation: grow .3s ease; }
 
 @keyframes grow {
   50% {
     box-shadow: 0 0 2rem #e22129;
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3); } }
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
-    opacity: .6; }
-  50% {
-    opacity: 0;
-    -webkit-transform: scale(2);
-            transform: scale(2); } }
+    transform: scale(1.3); } }
 @keyframes pulse {
   0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
     opacity: .6; }
   50% {
     opacity: 0;
-    -webkit-transform: scale(2);
-            transform: scale(2); } }
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
+    transform: scale(2); } }
 @keyframes fadeIn {
   0% {
     opacity: 0; }
@@ -54,11 +30,8 @@
   width: 2rem;
   height: 2rem;
   cursor: pointer;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-animation: fadeIn .5s ease;
-          animation: fadeIn .5s ease;
+  transform: translate(-50%, -50%);
+  animation: fadeIn .5s ease;
   z-index: 10; }
   .pin:first-child {
     z-index: 11; }
@@ -84,17 +57,14 @@
     border: 1rem solid #e22129;
     box-shadow: 0 0 0.2rem #e22129;
     opacity: 0;
-    -webkit-animation: pulse 3s infinite ease-out;
-            animation: pulse 3s infinite ease-out; }
+    animation: pulse 3s infinite ease-out; }
   .pin.active .circle {
     background-color: #21e2da; }
   .pin.active .glow {
     display: none; }
   .pin .more {
     left: 1rem;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%); }
+    transform: translateX(-50%); }
 
 .item {
   position: relative;
@@ -106,10 +76,7 @@
   color: #e22129;
   border: none;
   background-color: white;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  align-items: center; }
   .item:not(:last-child) {
     margin-bottom: 1rem; }
   .item:before, .item:after, .item > * {
@@ -151,9 +118,7 @@
       left: 50%;
       height: 0;
       width: 0;
-      -webkit-transform: translateY(0);
-          -ms-transform: translateY(0);
-              transform: translateY(0);
+      transform: translateY(0);
       border: solid transparent;
       border-bottom-color: #e22129;
       border-width: 1rem;
@@ -162,18 +127,7 @@
     display: block;
     opacity: 0;
     will-change: transition;
-    -webkit-animation: glimpse 5.5s .5s linear;
-            animation: glimpse 5.5s .5s linear; }
-
-@-webkit-keyframes glimpse {
-  0% {
-    opacity: 0; }
-  18% {
-    opacity: 1; }
-  82% {
-    opacity: 1; }
-  100% {
-    opacity: 0; } }
+    animation: glimpse 5.5s .5s linear; }
 
 @keyframes glimpse {
   0% {
@@ -204,9 +158,7 @@
     left: -3px;
     right: -3px;
     border-bottom: 2px solid #e22129;
-    -webkit-transform: rotate(-9deg);
-        -ms-transform: rotate(-9deg);
-            transform: rotate(-9deg); }
+    transform: rotate(-9deg); }
 
 .invert.invert {
   border: 0;
@@ -224,12 +176,9 @@
 
 .center {
   text-align: center; }
-  .center > * {
-    display: inline-block;
-    margin-bottom: 2rem; }
 
 .brick {
-  width: 25%;
+  flex: 1;
   padding: 1rem;
   border: 1px dotted #333; }
   .brick.full {
@@ -241,7 +190,8 @@
   overflow: visible; }
 
 .info-block {
-  margin-bottom: 32rem; }
+  margin-bottom: 32rem;
+  padding: 2rem; }
 
 h1 {
   font-size: 28px; }
@@ -254,16 +204,11 @@ h1 {
 #svg-lkw {
   width: 100%; }
 
-.row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+.donation-row {
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  .row > :not(:first-child) {
+  justify-content: center;
+  margin-bottom: 3rem; }
+  .donation-row > :not(:first-child) {
     margin-left: 2rem; }
 
 .donation-form {
@@ -273,14 +218,8 @@ h1 {
 
 .result {
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   will-change: transition;
   border: 2px solid #e22129; }
   .result .amount,
@@ -295,9 +234,7 @@ h1 {
   .result .amount:focus ~ .more, .result:hover .more, .result.active .more {
     display: block; }
   .result .more {
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
     top: 2rem;
     left: 50%; }
   .result .item:before {
@@ -307,24 +244,23 @@ h1 {
   content: attr(data-price) " €"; }
 
 .donation-button {
-  -webkit-transition: 1s all;
-          transition: 1s all; }
+  transition: 1s all; }
   .donation-button[disabled] {
     opacity: 0.3;
     color: #e22129;
     border: 1px dotted #333;
     background-color: white; }
 
+.infos {
+  width: 50rem;
+  max-width: 100%;
+  margin: 0 auto; }
+
 .info-buttons {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex; }
-  .info-buttons .brick {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1; }
+  .info-buttons text-align
+  .brick {
+    flex: 1; }
   .info-buttons a {
     color: #333; }
 
@@ -332,9 +268,14 @@ h1 {
   position: relative; }
   .info-block .view {
     display: none; }
+    .info-block .view h3 {
+      margin-top: 0;
+      margin-bottom: 1.5rem; }
+    .info-block .view h4 {
+      margin-top: 2rem; }
   .info-block img {
-    float: right;
-    margin: 1rem; }
+    width: 100%;
+    margin-bottom: 1rem; }
   .info-block .arrow {
     position: absolute;
     top: -2rem;
@@ -345,13 +286,17 @@ h1 {
     border-bottom-color: #333;
     border-width: 1rem;
     margin-left: -1rem;
-    -webkit-transition: left .5s;
-            transition: left .5s; }
+    transition: left .5s; }
   .info-block[data-view="0"] .arrow {
     left: calc(16.5% - .5rem); }
   .info-block[data-view="1"] .arrow {
     left: 50%; }
   .info-block[data-view="2"] .arrow {
     left: calc(83.5% + .5rem); }
+
+.image-strip {
+  float: left;
+  margin-right: 2rem;
+  width: 23rem; }
 
 /*# sourceMappingURL=style.css.map */
