--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,6 +63,13 @@
 
 // Site Styles ----------------------------------
 
+// meh ...
+#main > .inside,
+#main > .inside > .first > .ce_text {
+   overflow: visible;
+}
+
+
 .info-block {
    margin-bottom: 32rem;
    padding: $space;
