--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,7 +80,7 @@ h1 { font-size: 28px; }
 .lkw {
    position: relative;
    z-index: 10;
-   margin-bottom: $space * 2;
+   margin: 3rem 0 4rem;
 }
 
 #svg-lkw {
