--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,6 +63,9 @@
 
 // Site Styles ----------------------------------
 
+.navbar-collapse { margin-top: 42px; }
+.top-nav-collapse .navbar-collapse { margin-top: 23px; }
+
 // meh ...
 #main > .inside,
 #main > .inside > .first > .ce_text {
