Overflow in Main-Stylesheet überschrieben

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,6 +243,7 @@
 .top-nav-collapse .navbar-collapse {
   margin-top: 23px; }
 
+.centered-wrapper,
 #main > .inside,
 #main > .inside > .first > .ce_text {
   overflow: visible; }
