--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,7 @@
 .top-nav-collapse .navbar-collapse { margin-top: 23px; }
 
 // meh ...
+.centered-wrapper,
 #main > .inside,
 #main > .inside > .first > .ce_text {
    overflow: visible;
