Leichte Anpassungen für die Mobilversionen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,12 +237,16 @@
   .brick.slim {
     padding: 0 1rem; }
 
-.navbar-collapse {
-  margin-top: 42px; }
+@media (min-width: 1200px) {
+  .navbar-collapse {
+    margin-top: 42px; }
 
-.top-nav-collapse .navbar-collapse {
-  margin-top: 23px; }
-
+  .top-nav-collapse .navbar-collapse {
+    margin-top: 23px; } }
+@media (max-width: 990px) {
+  .logo {
+    margin-top: 0.5rem;
+    margin-left: 1rem; } }
 .centered-wrapper,
 #main > .inside,
 #main > .inside > .first > .ce_text {
