--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,8 +63,17 @@
 
 // Site Styles ----------------------------------
 
-.navbar-collapse { margin-top: 42px; }
-.top-nav-collapse .navbar-collapse { margin-top: 23px; }
+@media (min-width: 1200px) {
+   .navbar-collapse { margin-top: 42px; }
+   .top-nav-collapse .navbar-collapse { margin-top: 23px; }
+}
+@media (max-width: 990px) {
+   .logo {
+      margin-top: 0.5rem;
+      margin-left: 1rem;
+   }
+
+}
 
 // meh ...
 .centered-wrapper,
