--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,43 +7,19 @@
   font-weight: 500; }
 
 .grow {
-  -webkit-animation: grow .3s ease;
-          animation: grow .3s ease; }
-
-@-webkit-keyframes grow {
-  50% {
-    box-shadow: 0 0 2rem #e22129;
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3); } }
+  animation: grow .3s ease; }
 
 @keyframes grow {
   50% {
     box-shadow: 0 0 2rem #e22129;
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3); } }
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
-    opacity: .6; }
-  50% {
-    opacity: 0;
-    -webkit-transform: scale(2);
-            transform: scale(2); } }
+    transform: scale(1.3); } }
 @keyframes pulse {
   0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
     opacity: .6; }
   50% {
     opacity: 0;
-    -webkit-transform: scale(2);
-            transform: scale(2); } }
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
+    transform: scale(2); } }
 @keyframes fadeIn {
   0% {
     opacity: 0; }
@@ -54,11 +30,8 @@
   width: 2rem;
   height: 2rem;
   cursor: pointer;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-animation: fadeIn .5s ease;
-          animation: fadeIn .5s ease;
+  transform: translate(-50%, -50%);
+  animation: fadeIn .5s ease;
   z-index: 10; }
   .pin:first-child {
     z-index: 11; }
@@ -84,17 +57,14 @@
     border: 1rem solid #e22129;
     box-shadow: 0 0 0.2rem #e22129;
     opacity: 0;
-    -webkit-animation: pulse 3s infinite ease-out;
-            animation: pulse 3s infinite ease-out; }
+    animation: pulse 3s infinite ease-out; }
   .pin.active .circle {
     background-color: #21e2da; }
   .pin.active .glow {
     display: none; }
   .pin .more {
     left: 1rem;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%); }
+    transform: translateX(-50%); }
 
 .item {
   position: relative;
@@ -106,10 +76,7 @@
   color: #e22129;
   border: none;
   background-color: white;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  align-items: center; }
   .item:not(:last-child) {
     margin-bottom: 1rem; }
   .item:before, .item:after, .item > * {
@@ -138,13 +105,11 @@
   .more:after {
     content: " ";
     position: absolute;
-    top: 0;
+    top: 1px;
     left: 50%;
     height: 0;
     width: 0;
-    -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     border: solid transparent;
     border-bottom-color: #e22129;
     border-width: 1rem;
@@ -163,18 +128,7 @@
     display: block;
     opacity: 0;
     will-change: transition;
-    -webkit-animation: glimpse 5.5s .5s linear;
-            animation: glimpse 5.5s .5s linear; }
-
-@-webkit-keyframes glimpse {
-  0% {
-    opacity: 0; }
-  18% {
-    opacity: 1; }
-  82% {
-    opacity: 1; }
-  100% {
-    opacity: 0; } }
+    animation: glimpse 5.5s .5s linear; }
 
 @keyframes glimpse {
   0% {
@@ -205,9 +159,7 @@
     left: -3px;
     right: -3px;
     border-bottom: 2px solid #e22129;
-    -webkit-transform: rotate(-9deg);
-        -ms-transform: rotate(-9deg);
-            transform: rotate(-9deg); }
+    transform: rotate(-9deg); }
 
 .invert.invert {
   border: 0;
@@ -227,10 +179,7 @@
   text-align: center; }
 
 .brick {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   padding: 1rem;
   border: 1px dotted #333; }
   .brick.full {
@@ -269,22 +218,14 @@ h1 {
   width: 100%; }
 
 .donation-row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-bottom: 3rem; }
   .donation-row > :not(:first-child) {
     margin-left: 2rem; }
 
 .donation-form {
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  flex-wrap: wrap;
   margin-bottom: 4rem; }
   .donation-form .result,
   .donation-form .donation-button {
@@ -293,14 +234,8 @@ h1 {
 
 .result {
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   will-change: transition;
   border: 2px solid #e22129; }
   .result .amount,
@@ -315,9 +250,7 @@ h1 {
   .result .amount:focus ~ .more, .result:hover .more, .result.active .more {
     display: block; }
   .result .more {
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
     top: 2rem;
     left: 50%; }
   .result .item:before {
@@ -327,8 +260,7 @@ h1 {
   content: attr(data-price) " €"; }
 
 .donation-button {
-  -webkit-transition: 1s all;
-          transition: 1s all; }
+  transition: 1s all; }
   .donation-button[disabled] {
     opacity: 0.3;
     color: #e22129;
@@ -341,16 +273,10 @@ h1 {
   margin: 0 auto; }
 
 .info-buttons {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex; }
   .info-buttons text-align
   .brick {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1; }
+    flex: 1; }
   .info-buttons a {
     color: #333; }
 
@@ -376,8 +302,7 @@ h1 {
     border-bottom-color: #333;
     border-width: 1rem;
     margin-left: -1rem;
-    -webkit-transition: left .5s;
-            transition: left .5s; }
+    transition: left .5s; }
   .info-block[data-view="0"] .arrow {
     left: calc(16.5% - .5rem); }
   .info-block[data-view="1"] .arrow {
