--- a/scss/_more.scss
+++ b/scss/_more.scss
@@ -16,7 +16,7 @@ $textColor: $white;
    &:after {
       content: " ";
       position: absolute;
-      top: 0;
+      top: 1px;
       left: 50%;
       height: 0;
       width: 0;
