--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,19 +7,43 @@
   font-weight: 500; }
 
 .grow {
-  animation: grow .3s ease; }
+  -webkit-animation: grow .3s ease;
+          animation: grow .3s ease; }
+
+@-webkit-keyframes grow {
+  50% {
+    box-shadow: 0 0 2rem #e22129;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3); } }
 
 @keyframes grow {
   50% {
     box-shadow: 0 0 2rem #e22129;
-    transform: scale(1.3); } }
-@keyframes pulse {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3); } }
+@-webkit-keyframes pulse {
   0% {
-    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
     opacity: .6; }
   50% {
     opacity: 0;
-    transform: scale(2); } }
+    -webkit-transform: scale(2);
+            transform: scale(2); } }
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    opacity: .6; }
+  50% {
+    opacity: 0;
+    -webkit-transform: scale(2);
+            transform: scale(2); } }
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 @keyframes fadeIn {
   0% {
     opacity: 0; }
@@ -30,8 +54,11 @@
   width: 2rem;
   height: 2rem;
   cursor: pointer;
-  transform: translate(-50%, -50%);
-  animation: fadeIn .5s ease;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: fadeIn .5s ease;
+          animation: fadeIn .5s ease;
   z-index: 10; }
   .pin:first-child {
     z-index: 11; }
@@ -57,14 +84,17 @@
     border: 1rem solid #e22129;
     box-shadow: 0 0 0.2rem #e22129;
     opacity: 0;
-    animation: pulse 3s infinite ease-out; }
+    -webkit-animation: pulse 3s infinite ease-out;
+            animation: pulse 3s infinite ease-out; }
   .pin.active .circle {
     background-color: #21e2da; }
   .pin.active .glow {
     display: none; }
   .pin .more {
     left: 1rem;
-    transform: translateX(-50%); }
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%); }
 
 .item {
   position: relative;
@@ -76,7 +106,10 @@
   color: #e22129;
   border: none;
   background-color: white;
-  align-items: center; }
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .item:not(:last-child) {
     margin-bottom: 1rem; }
   .item:before, .item:after, .item > * {
@@ -109,7 +142,9 @@
     left: 50%;
     height: 0;
     width: 0;
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
     border: solid transparent;
     border-bottom-color: #e22129;
     border-width: 1rem;
@@ -128,7 +163,18 @@
     display: block;
     opacity: 0;
     will-change: transition;
-    animation: glimpse 5.5s .5s linear; }
+    -webkit-animation: glimpse 5.5s .5s linear;
+            animation: glimpse 5.5s .5s linear; }
+
+@-webkit-keyframes glimpse {
+  0% {
+    opacity: 0; }
+  18% {
+    opacity: 1; }
+  82% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
 
 @keyframes glimpse {
   0% {
@@ -159,7 +205,9 @@
     left: -3px;
     right: -3px;
     border-bottom: 2px solid #e22129;
-    transform: rotate(-9deg); }
+    -webkit-transform: rotate(-9deg);
+        -ms-transform: rotate(-9deg);
+            transform: rotate(-9deg); }
 
 .invert.invert {
   border: 0;
@@ -179,7 +227,10 @@
   text-align: center; }
 
 .brick {
-  flex: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   padding: 1rem;
   border: 1px dotted #333; }
   .brick.full {
@@ -218,14 +269,22 @@ h1 {
   width: 100%; }
 
 .donation-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 3rem; }
   .donation-row > :not(:first-child) {
     margin-left: 2rem; }
 
 .donation-form {
-  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   margin-bottom: 4rem; }
   .donation-form .result,
   .donation-form .donation-button {
@@ -234,8 +293,14 @@ h1 {
 
 .result {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   will-change: transition;
   border: 2px solid #e22129; }
   .result .amount,
@@ -250,7 +315,9 @@ h1 {
   .result .amount:focus ~ .more, .result:hover .more, .result.active .more {
     display: block; }
   .result .more {
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     top: 2rem;
     left: 50%; }
   .result .item:before {
@@ -260,7 +327,8 @@ h1 {
   content: attr(data-price) " €"; }
 
 .donation-button {
-  transition: 1s all; }
+  -webkit-transition: 1s all;
+          transition: 1s all; }
   .donation-button[disabled] {
     opacity: 0.3;
     color: #e22129;
@@ -273,10 +341,16 @@ h1 {
   margin: 0 auto; }
 
 .info-buttons {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex; }
   .info-buttons text-align
   .brick {
-    flex: 1; }
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1; }
   .info-buttons a {
     color: #333; }
 
@@ -302,7 +376,8 @@ h1 {
     border-bottom-color: #333;
     border-width: 1rem;
     margin-left: -1rem;
-    transition: left .5s; }
+    -webkit-transition: left .5s;
+            transition: left .5s; }
   .info-block[data-view="0"] .arrow {
     left: calc(16.5% - .5rem); }
   .info-block[data-view="1"] .arrow {
@@ -315,5 +390,4 @@ h1 {
   margin-right: 2rem;
   width: 23rem;
   max-width: 100%; }
-
 /*# sourceMappingURL=style.css.map */
