Fixe Navbar hat zu viele Probleme bereitet, darum jetzt statisch

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,19 +64,16 @@
 
 // Site Styles ----------------------------------
 
-@media (min-width: 1200px) {
-   .navbar-collapse { margin-top: 42px; }
-   .top-nav-collapse .navbar-collapse { margin-top: 23px; }
-}
 @media (max-width: 990px) {
    .logo {
       margin-top: 0.5rem;
       margin-left: 1rem;
    }
-
 }
+.top-nav-collapse .navbar-collapse { margin-top: 23px; }
 
 // meh ...
+.normal #main > .inside { margin-top: 0; }
 .centered-wrapper,
 #main > .inside,
 #main > .inside > .first > .ce_text {
